--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Nomad's Oasis</title>
   </head>
   <body>
-    Welcome
+    <div class="header">
+      <h1> Welcome fellow Nomads! </h1>
+    </div>
+    <div class="body">
+    </div>
+    <div class="footer">
+    </div>
   </body>
 </html>
