--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
       <h1> Welcome fellow Nomads! </h1>
     </div>
     <div class="body">
+      <div class="navcontainer">
+        <ul>
+          <li><a href="http://cpaztik.codehs.me/">Home</a></li>
+          <li><a href="http://cpaztik.codehs.me/aboutme">About Me</a></li>
+          <li><a href="http://cpaztik.codehs.me/portfolio">Portfolio</a></li>
+          <li><a href="http://cpaztik.codehs.me/contact">Contact</a></li>
+          <li></li>
+        </ul>
+      </div>
     </div>
     <div class="footer">
     </div>
